Add Spring Boot 3

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+notes.md
 # Compiled class file
 *.class
 
@@ -31,6 +32,7 @@ out/
 .gradle
 **/build/
 !src/**/build/
-!gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.jar
 
-notes.md
+### VS Code ###
+.vscode/
